--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import "./scss/base/base";
+@import "./scss/base/settings";
 @import "./scss/components/articles";
 
 #modal2 {
@@ -14,7 +15,7 @@
 }
 
 .alert-error {
-  color: red;
+  color: $color-red;
   font-style: oblique;
   margin-top: 0.5em;
   padding: 0.6em;
@@ -31,5 +32,5 @@
 }
 
 .alert-reg-success {
-  color: green;
+  color: $color-green;
 }
